reposition light spawn point

--- a/src/components/Renderer.astro
+++ b/src/components/Renderer.astro
@@ -1,6 +1,6 @@
 ---
 // model_renderer/src/components/Renderer.astro
-const CANVAS_ID = "webgpu-canvas";  // modernart1-sculpt-1, IMAGE3D-1, dezimiertt-glb-03
+const CANVAS_ID = "webgpu-canvas";  // modernart1-sculpt-1, newmesh, dezimiertt-glb-03 (too big), PORTAL
 const { modelPath = "/models/newmesh.glb" } = Astro.props;
 ---
 <div 
